--- a/index.html
+++ b/index.html
@@ -9,43 +9,39 @@
   <body>
     <header>
       <h1>Star Wars Wiki</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">New Search</a></li>
-          <li><a href="detailed.html">Details</a></li>
-        </ul>
-      </nav>
     </header>
 
     <!-- Söka åtminstone på titeln -->
     <form action="">
-      <label for="search-input">Search for Star Wars info</label>
+      <label for="search-input">Search Movie</label>
       <input
         type="search"
         id="search-input"
         aria-label="Search trough Star Wars content"
       />
-      <button type="button">Serach</button>
+      <button id="btn-login" type="button">Search</button>
     </form>
 
     <!-- Sökresultat ska visa filmtitel, regissörens namn, filmens opening crawl -->
     <!-- Ska även finnas en länk från sökresultatet till detaljsida -->
     <!-- Div för att lägga in templaten i från javascripten -->
-    <div>
-      <div id="course-cards"></div>
-    </div>
 
-    <!-- Template för datan från API -->
-    <template id="courses-card-template">
-      <div>
-        <div>
-          <div class="card-body">
-            <h5 id="courseName" class="card-title"></h5>
-            <p id="courseId" class="card-text"></p>
+    <!-- Sökresultat -->
+    <div id="results"></div>
+
+    <div class="row">
+      <div class="col m-3">
+        <div id="search-result"></div>
+        <template id="template-film">
+          <div class="title"></div>
+          <div class="director"></div>
+          <div class="opening-crawl"></div>
+          <div>
+            <a href="#" class="link-to-details">Details</a>
           </div>
-        </div>
+        </template>
       </div>
-    </template>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
