funkar med att länka till detaljsidan, dock buggigt och visat vissa felmeddelanden, lite oklart varför, frågat johan

--- a/details.html
+++ b/details.html
@@ -7,9 +7,34 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <h1>Star Wars Wiki</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Back to search</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <!-- Detalj-sida ska innehålla: titel, regissör, producent,
     "opening crawl", releasedatum, antal karaktärer
     och antal olika rymdskepp som ingår i filmen. -->
-    <div class="details"></div>
+    <div>
+      <div id="title"></div>
+      <div id="episode-id"></div>
+      <div id="opening-crawl"></div>
+      <div id="director"></div>
+      <div id="producer"></div>
+      <div id="release-date"></div>
+      <div id="characters"></div>
+      <div id="planets"></div>
+      <div id="starships"></div>
+      <div id="vehicles"></div>
+      <div id="species"></div>
+    </div>
+
+    <script src="details.js"></script>
   </body>
 </html>
