--- a/details.html
+++ b/details.html
@@ -13,41 +13,49 @@
     />
     <!-- EGET CSS -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Stjärnor från https://codemyui.com/parallax-pixel-stars-using-pure-css/ -->
+    <link rel="stylesheet" href="stars.css" />
+    <!-- Star Wars "official font" (enligt wikipedia om News Gothic) -->
+    <link rel="stylesheet" href="https://use.typekit.net/ddv3wye.css" />
     <title>Details - Star Wars API</title>
   </head>
-  <body>
+  <body class="container text-center" id="details-body">
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
     <header>
-      <h1>Star Wars Wiki</h1>
+      <h1 class="display-4">Star Wars Wiki</h1>
       <nav>
         <ul>
           <li>
-            <a href="index.html">Back to search</a>
+            <a class="text-warning nav-back" href="index.html"
+              >Back to search</a
+            >
           </li>
         </ul>
       </nav>
     </header>
-
     <!-- Det hade varit kul om opening crawl kom som en sån här
     text som la sig först på hela sidan innan den "vanliga" sidan dök upp
   https://css-tricks.com/snippets/css/star-wars-crawl-text/ -->
-
     <!-- Detalj-sida ska innehålla: titel, regissör, producent,
     "opening crawl", releasedatum, antal karaktärer
     och antal olika rymdskepp som ingår i filmen. -->
-    <div>
-      <div id="title"></div>
-      <div id="episode-id"></div>
-      <div id="opening-crawl"></div>
-      <div id="director"></div>
-      <div id="producer"></div>
-      <div id="release-date"></div>
-      <div id="characters"></div>
-      <div id="planets"></div>
-      <div id="starships"></div>
-      <div id="vehicles"></div>
-      <div id="species"></div>
+    <div class="d-flex justify-content-center">
+      <div class="col-md-6 details-div">
+        <h2 id="title"></h2>
+        <div class="m-2" id="episode-id"></div>
+        <div class="m-2" id="opening-crawl"></div>
+        <div class="m-2" id="director"></div>
+        <div class="m-2" id="producer"></div>
+        <div class="m-2" id="release-date"></div>
+        <div class="m-2" id="characters"></div>
+        <div class="m-2" id="planets"></div>
+        <div class="m-2" id="starships"></div>
+        <div class="m-2" id="vehicles"></div>
+        <div class="m-2" id="species"></div>
+      </div>
     </div>
-
     <!-- EGET SKRIPT -->
     <script src="details.js"></script>
     <!-- BOOTSTRAP -->
