--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     <div id="stars2"></div>
     <div id="stars3"></div>
     <header>
-      <h1 class="display-4">Star Wars Wiki</h1>
+      <h1 class="display-4 pt-4">Star Wars Wiki</h1>
     </header>
     <!-- Söka åtminstone på titeln -->
     <h2><label for="search-input">Search Movie</label></h2>
     <div class="d-flex justify-content-center">
-      <form class="input-group col-lg-6" action="">
+      <form class="input-group col-md-6 col-xl-4" action="">
         <input
           type="search"
           id="search-input"
           class="form-control rounded"
           aria-label="Search trough Star Wars content"
-          placeholder="Enter name of the movie here"
+          placeholder="Movie name"
         />
         <button class="btn btn-warning" id="btn-login" type="button">
           <svg
