fixat stjärnornas paddingfel

--- a/details.html
+++ b/details.html
@@ -19,17 +19,18 @@
     <link rel="stylesheet" href="https://use.typekit.net/ddv3wye.css" />
     <title>Details - Star Wars API</title>
   </head>
-  <body class="container text-center" id="details-body">
+  
+  <body class="container col-12 text-center" id="details-body">
     <div id="stars"></div>
-    <div id="stars2"></div>
-    <div id="stars3"></div>
-    <header>
+  <div id="stars2"></div>
+  <div id="stars3"></div>
+    <header></header>
       <h1 class="display-4">Star Wars Wiki</h1>
       <nav>
         <ul>
           <li>
             <a class="text-warning nav-back" href="index.html"
-              >Back to search</a
+              >New Search</a
             >
           </li>
         </ul>
