--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/ddv3wye.css" />
     <title>Star Wars API</title>
   </head>
-  <body class="container text-center">
+  <body class="container col-12 text-center">
     <div id="stars"></div>
     <div id="stars2"></div>
     <div id="stars3"></div>
