--- a/details.html
+++ b/details.html
@@ -34,7 +34,7 @@
       <nav>
         <ul>
           <li>
-            <a class="text-warning nav-back" href="index.html">New Search</a>
+            <a class="nav-back" href="index.html">New Search</a>
           </li>
         </ul>
       </nav>
